# djavue3

./: FLYIO.md  README.md  cookiecutter.json  logo
docs/: .gitignore  (+23 more)
{{cookiecutter.project_slug}}/: .dockerignore  .env  .gitignore  .gitlab-ci.yml  Dockerfile  FLYIO.md  README.md  docker-compose.apimock.yml  docker-compose.yml  manage.py  pyproject.toml  requirements-dev-txt-django_ninja.pip  requirements-dev-txt-django_only.pip  requirements-dev-txt-openapi.pip  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg  tox.ini  uwsgi.ini
{{cookiecutter.project_slug}}/.cursor/rules/: djavue-project.mdc
{{cookiecutter.project_slug}}/.cursor/rules/backend/: django-models.mdc  django-services.mdc
{{cookiecutter.project_slug}}/.cursor/rules/frontend/: vue-components.mdc
{{cookiecutter.project_slug}}/.devcontainer/: devcontainer.json
{{cookiecutter.project_slug}}/.github/: pull_request_template.md
{{cookiecutter.project_slug}}/.github/workflows/: python-app-cd-flyio.yml  python-app-ci.yml  python-app.yml
{{cookiecutter.project_slug}}/apimock/: Dockerfile
{{cookiecutter.project_slug}}/apimock/server/: index.js
{{cookiecutter.project_slug}}/apimock/server/controllers/: accounts.js  {{cookiecutter.app_name}}.js
{{cookiecutter.project_slug}}/apimock/server/data/: index.js
{{cookiecutter.project_slug}}/docker/fixtures/: {{cookiecutter.model_lower}}_fixture.json
{{cookiecutter.project_slug}}/docker/nginx/: default_local
{{cookiecutter.project_slug}}/frontend/: .dockerignore  .env  Dockerfile  index.html  package-lock.json  package.json
{{cookiecutter.project_slug}}/frontend-nuxt/: .env.example  .gitignore  Dockerfile  app.vue  error.vue  nuxt.config.ts  package.json  pnpm-lock.yaml
{{cookiecutter.project_slug}}/frontend-nuxt/assets/css/: main.css
{{cookiecutter.project_slug}}/frontend-nuxt/components/: dark-mode-switch.vue  login-card.vue  you-can-help.vue
{{cookiecutter.project_slug}}/frontend-nuxt/components/header/: index.vue
{{cookiecutter.project_slug}}/frontend-nuxt/components/hero/: message.vue
{{cookiecutter.project_slug}}/frontend-nuxt/components/task-list/: index.vue  overview.vue  text-input.vue
{{cookiecutter.project_slug}}/frontend-nuxt/composables/: useAPI.ts
{{cookiecutter.project_slug}}/frontend-nuxt/layouts/: default.vue
{{cookiecutter.project_slug}}/frontend-nuxt/middleware/: authenticated.ts  unauthenticated.ts  user.global.ts
{{cookiecutter.project_slug}}/frontend-nuxt/pages/: forgot-password.vue  home.vue  index.vue  login.vue  logout.vue  sign-up.vue
{{cookiecutter.project_slug}}/frontend-nuxt/plugins/: api.ts  vuetify.ts
{{cookiecutter.project_slug}}/frontend-nuxt/stores/: account-store.ts  task-store.ts
{{cookiecutter.project_slug}}/frontend-nuxt/types/: tasks.ts  user.ts
{{cookiecutter.project_slug}}/frontend/src/: main.js
{{cookiecutter.project_slug}}/frontend/src/api/: README.md  accounts.api.js  config.js  {{cookiecutter.app_name}}.api.js
{{cookiecutter.project_slug}}/frontend/src/apimock/: README.md  index.js
{{cookiecutter.project_slug}}/frontend/src/components/: AppErrorDialog.vue  AppFooter.vue  AppNavBar.vue  AppSnackbar.vue  {{cookiecutter.model_singular}}.vue  {{cookiecutter.model_singular}}Form.vue
{{cookiecutter.project_slug}}/frontend/src/layouts/: README.md
{{cookiecutter.project_slug}}/frontend/src/router/: README.md  accounts.routes.js  base.routes.js  index.js  {{cookiecutter.app_name}}.routes.js
{{cookiecutter.project_slug}}/frontend/src/settings/: README.md  environment.js
{{cookiecutter.project_slug}}/frontend/src/stores/: README.md  accountsStore.js  baseStore.js  baseStore.test.js  {{cookiecutter.app_name}}Store.js
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/accounts/: admin.py  apps.py  models.py  schemas.py  urls.py  views.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/base/: apps.py  exceptions.py  middlewares.py  schemas.py  urls.py  views.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/commons/: django_views_utils.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/{{cookiecutter.app_name}}/: admin.py  apps.py  models.py  schemas.py  urls.py  views.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: api.py  connexion.py  openapi.yaml  settings.py  urls.py  wsgi.py
(+64 files in other folders)
